# okasaki-study

./: .gitignore  README.md  dune-project  okasaki-study.opam
.github/workflows/: test.yml
notes/: ch02.md  ch03.md  ch04.md  ch05.md  ch06.md
ocaml/: ch02_binary_search_trees.ml  ch02_lists.ml  ch03_heaps.ml  ch03_red_black_trees.ml  ch04_streams.ml  ch05_amortization.ml  ch06_lazy_ap.ml  dune  heap_test_helpers.ml  queue_test_helpers.ml  set_test_helpers.ml  sigs.ml  test_ch02_binary_search_trees.ml  test_ch02_lists.ml  test_ch03_heaps.ml  test_ch03_red_black_trees.ml  test_ch04_streams.ml  test_ch05_amortization.ml  test_ch06_lazy_ap.ml
