(library
  (name okasaki)
  (modules
    sigs
    ch02_binary_search_trees
    ch02_lists
    ch03_heaps
    ch03_red_black_trees
    ch04_streams
    ch05_amortization
    ch06_lazy_ap))

(library
  (name okasaki_test_helpers)
  (libraries okasaki alcotest)
  (modules heap_test_helpers queue_test_helpers set_test_helpers))

(tests
  (names
    test_ch02_lists
    test_ch02_binary_search_trees
    test_ch03_red_black_trees
    test_ch03_heaps
    test_ch04_streams
    test_ch05_amortization
    test_ch06_lazy_ap)
  (modules
    test_ch02_lists
    test_ch02_binary_search_trees
    test_ch03_red_black_trees
    test_ch03_heaps
    test_ch04_streams
    test_ch05_amortization
    test_ch06_lazy_ap)
  (libraries okasaki okasaki_test_helpers alcotest)
  (link_flags (:standard -linkall)))
